libkmfl (0.9.5-1) 

  * Fix deadkeys in "any" statement problem
  * Fix problem when a mixture of backspaces interspersed with characters
    was output when processing a single keystroke

 -- Doug Rintoul <doug_rintoulsil.org>  Fri, 15 Sep 2006 11:10:00 -0700

libkmfl (0.9.4-1) 

  * Use UTF conversion routines in kmflcomp rather than a local copy

 -- Doug Rintoul <doug_rintoulsil.org>  Fri, 16 Jun 2006 11:10:00 -0700


libkmfl (0.9.2-1)

  * Replace UTF Conversion library with a GPLed implementation
  * fix any/index bug

 -- Doug Rintoul <doug_rintoulsil.org>  Thu, 02 Mar 2006 11:10:00 -0800

libkmfl (0.9.1-1)

  * further fix for the shift key problem
  * AMD64 fixes

 -- Doug Rintoul <doug_rintoulsil.org>  Wed, 12 Oct 2005 09:45:00 -0800

0.9             30-Aug-2005
				Fix shift key problem
0.8             4-Jul-2005
				Add full support for virtual keys.
0.7             2-Jun-2005
                Fix bug when keyboard name was greater than 31 characters.
				Increase maximum size of names to 64 characters and add warnings when names exceed this amount
				Allow stores to be used before they are defined
0.6             31-May-2005
                Add the ability to load uncompiled keyboards on the fly

