@@ -4,7 +4,7 @@ dnl If you don't want it to overwrite it,
 dnl 	Please disable it in the Anjuta project configuration
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(libkmfl, 0.9.4)
+AM_INIT_AUTOMAKE(libkmfl, 0.9.6)
 AM_CONFIG_HEADER(config.h)
 
 AC_ISC_POSIX
